--- a/components/polymer/src/features/micro/attributes.html
+++ b/components/polymer/src/features/micro/attributes.html
@@ -7,6 +7,9 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
+<link rel="import" href="../../lib/annotations/annotations.html">
+
 <script>
 
   /**
@@ -52,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * @class base feature: attributes
    */
   
-  using('Base', function(Base) {
+  using(['Base', 'Annotations'], function(Base, Annotations) {
 
     Base.addFeature({
 
@@ -78,32 +81,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       _takeAttributesToModel: function(model) {
-        for (var name in this.properties) {
-          var type = this.getPropertyType(name);
-          if (type && this.hasAttribute(name)) {
-            this.setAttributeToProperty(model, name, type);
+        for (var propName in this.properties) {
+          var type = this.getPropertyType(propName);
+          var attrName = Annotations.camelToDashCase(propName);
+          if (type && this.hasAttribute(attrName)) {
+            var val = this.getAttribute(attrName);
+            model[propName] = this.deserialize(val, type);
           }
         }
       },
 
-      setAttributeToProperty: function(model, name, type) {
-        if (this._serializing) {
-          // Don't deserialize back to property if currently reflecting
-          return;
-        }
-        type = type || this.getPropertyType(name);
-        if (type) {
-          model[name] = this.deserialize(name, this.getAttribute(name), type);
+      setAttributeToProperty: function(model, attrName) {
+        // Don't deserialize back to property if currently reflecting
+        if (!this._serializing) {
+          var propName = Annotations.dashToCamelCase(attrName);
+          var type = this.getPropertyType(propName);
+          if (type) {
+            var val = this.getAttribute(attrName);
+            model[propName] = this.deserialize(val, type);
+          }
         }
       },
 
-      deserialize: function(name, value, type) {
-        //
-        var hasAttribute = this.hasAttribute(name);
-        if (!hasAttribute && (type != Boolean) && (this[name] == null)) {
-          return;
-        }
-        //
+      deserialize: function(value, type) {
         switch (type) {
 
           case Number:
@@ -111,7 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             break;
 
           case Boolean:
-            value = hasAttribute;
+            value = (value !== null);
             break;
 
           case Object:
