--- a/components/polymer/src/features/standard/styling.html
+++ b/components/polymer/src/features/standard/styling.html
@@ -29,11 +29,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _prepTemplate: function() {
         prepTemplate.call(this);
         var port = domModule.import(this.is);
-        this._encapsulateStyle = (port && port.hasAttribute('encapsulate')) &&
-          !settings.useNativeShadow;
+        if (this._encapsulateStyle === undefined) {
+          this._encapsulateStyle = Boolean(port && !settings.useNativeShadow);
+        }
         // scope css
         // NOTE: dom scoped via annotations
-        // TODO(sorvell): native shadow styles will contain custom properties
         if (settings.useNativeShadow || this._encapsulateStyle) {
           this._scopeCss();
         }
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       _prepElement: function(element) {
         if (this._encapsulateStyle) {
-          element.classList.add(this.is + transformer.SCOPE_SUFFIX);
+          transformer.element(element, this.is);
         }
         prepElement.call(this, element);
       },
