--- a/components/polymer/src/lib/annotations/demo/app-chrome.html
+++ b/components/polymer/src/lib/annotations/demo/app-chrome.html
@@ -28,7 +28,7 @@
 
   <template>
 
-    <span id="foo" attribute="{{path}}" oneway="[[otherpath]]" style:="{{specialStyle}}">{{text}}</span>
+    <span id="foo" on-tap="taphandler" attribute="{{path}}" oneway="[[otherpath]]" style:="{{specialStyle}}">{{text}}</span>
 
   </template>
 
