--- a/components/polymer/src/features/standard/configure.html
+++ b/components/polymer/src/features/standard/configure.html
@@ -122,7 +122,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       // redundant, but safe due to dirty checking
       _applyConfig: function(config) {
         for (var n in config) {
-          this[n] = config[n];
+          // Don't stomp on values that may have been set by other side effects
+          if (this[n] === undefined) {
+            this[n] = config[n];
+          }
         }
       },
 
