bower update - no modulate

--- a/components/polymer/src/expr/x-styling-defaults.html
+++ b/components/polymer/src/expr/x-styling-defaults.html
@@ -10,9 +10,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../lib/style-util.html">
 <script>
 
-  modulate('StyleDefaults', ['Base', 'StyleUtil'], function(Base, styleUtil) {
+  (function() {
     
-    Base.addFeature({
+    Polymer.Base.addFeature({
 
       // TODO(sorvell): decide if this fits; an element can supply
       // default property values which will be added to the global scope;
@@ -27,7 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     function applyDefaultCss(cssText) {
       defaultSheet.textContent += cssText;
-      defaultSheet.__cssRules = styleUtil.parser.parse(defaultSheet.textContent);
+      defaultSheet.__cssRules =
+        Polymer.StyleUtil.parser.parse(defaultSheet.textContent);
     }
 
 
@@ -50,11 +51,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     });
 
     // exports
-    return {
+    Polymer.StyleDefaults = {
       applyDefaultCss: applyDefaultCss,
       applyDefaultStyle: applyDefaultStyle,
       defaultSheet: defaultSheet
     };
 
-  });
+  })();
 </script>
