--- a/components/polymer/src/features/standard/resolveUrl.html
+++ b/components/polymer/src/features/standard/resolveUrl.html
@@ -8,23 +8,20 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <script>
-using(['Base'], function(Base) {
 
-  var domModule = document.createElement('dom-module');
-
-  Base.addFeature({
+  Polymer.Base.addFeature({
 
     resolveUrl: function(url) {
       // TODO(sorvell): do we want to put the module reference on the prototype?
-      var module = domModule.import(this.is);
+      var module = Polymer.DomModule.import(this.is);
       var root = '';
       if (module) {
         var assetPath = module.getAttribute('assetpath') || '';
-        root = new URL(assetPath, module.ownerDocument.baseURI);
+        root = Polymer.ResolveUrl.resolveUrl(assetPath, module.ownerDocument.baseURI);
       }
-      return new URL(url, root).href;
+      return Polymer.ResolveUrl.resolveUrl(url, root);
     }
 
   });
-});
+
 </script>
