--- a/components/polymer/src/lib/array-observe.html
+++ b/components/polymer/src/lib/array-observe.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-modulate('ArrayObserve', 'Debounce', function(Debounce) {
+(function() {
 
   var callbacks = new WeakMap();
   
@@ -66,32 +66,32 @@ modulate('ArrayObserve', 'Debounce', function(Debounce) {
     };
     callbacks.set(array, []);
     array.push = function() {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       addSplice(array.length, 1, []);
       return orig.push.apply(this, arguments);
     };
     array.pop = function() {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       addSplice(array.length - 1, 0, array.slice(-1));
       return orig.pop.apply(this, arguments);
     };
     array.splice = function(start, deleteCount) {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       addSplice(start, arguments.length - 2, array.slice(start, start + deleteCount));
       return orig.splice.apply(this, arguments);
     };
     array.shift = function() {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       addSplice(0, 0, [array[0]]);
       return orig.shift.apply(this, arguments);
     };
     array.unshift = function() {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       addSplice(0, 1, []);
       return orig.unshift.apply(this, arguments);
     };
     array.sort = function() {
-      debounce = Debounce(debounce, fin);
+      debounce = Polymer.Debounce(debounce, fin);
       console.warn('[ArrayObserve]: sort not observable');
       return orig.sort.apply(this, arguments);
     };
@@ -105,11 +105,11 @@ modulate('ArrayObserve', 'Debounce', function(Debounce) {
     array.__polymerObservable = true;
   }
 
-  return {
+  Polymer.ArrayObserve = {
     observe: observe,
     unobserve: unobserve
   };
   
-});
+})();
 
 </script>
