--- a/components/polymer/src/lib/template/x-array-selector.html
+++ b/components/polymer/src/lib/template/x-array-selector.html
@@ -10,8 +10,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-using('Collection', function(Collection) {
-
   Polymer({
     is: 'x-array-selector',
     
@@ -41,12 +39,12 @@ using('Collection', function(Collection) {
       // Initialize selection
       if (this.multi) {
         this.selected = [];
-        this.selectedCollection = Collection.get(this.selected);
+        this.selectedCollection = Polymer.Collection.get(this.selected);
       } else {
         this.selected = null;
       }
       if (this.items) {
-        this.itemsCollection = Collection.get(this.items);
+        this.itemsCollection = Polymer.Collection.get(this.items);
       }
     },
 
@@ -54,10 +52,10 @@ using('Collection', function(Collection) {
       if (this.multi) {
         // var sidx = this.selected.indexOf(item);
         // if (sidx >= 0) {
-        var skey = Collection.get(this.selected).getKey(item);
+        var skey = Polymer.Collection.get(this.selected).getKey(item);
         if (skey >= 0) {
           // this.selected.splice(sidx, 1);
-          Collection.get(this.selected).remove(item);
+          Polymer.Collection.get(this.selected).remove(item);
           this.unbindPaths('selected.' + skey);
           return true;
         }
@@ -68,17 +66,17 @@ using('Collection', function(Collection) {
     },
 
     select: function(item) {
-      var key = Collection.get(this.items).getKey(item);
+      var key = Polymer.Collection.get(this.items).getKey(item);
       if (this.multi) {
         // var sidx = this.selected.indexOf(item);
         // if (sidx < 0) {
-        var skey = Collection.get(this.selected).getKey(item);
+        var skey = Polymer.Collection.get(this.selected).getKey(item);
         if (skey >= 0) {
           this.deselect(item);
         } else if (this.toggle) {
           // this.selected.push(item);
           // this.bindPaths('selected.' + sidx, 'items.' + skey);
-          skey = Collection.get(this.selected).add(item);
+          skey = Polymer.Collection.get(this.selected).add(item);
           this.bindPaths('selected.' + skey, 'items.' + key);
         }
       } else {
@@ -92,7 +90,5 @@ using('Collection', function(Collection) {
     }
 
   });
-
-});
 
 </script>
