--- a/components/polymer/polymer-micro.html
+++ b/components/polymer/polymer-micro.html
@@ -17,21 +17,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-  using('Base', function(Base) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    registerFeatures: function() {
+      this._prepMixins();
+      this._prepExtends();
+      this._prepConstructor();
+    },
 
-      registerFeatures: function() {
-        this._prepMixins();
-        this._prepExtends();
-        this._prepConstructor();
-      },
-
-      initFeatures: function() {
-        this._marshalAttributes();
-      }
-
-    });
+    initFeatures: function() {
+      this._marshalAttributes();
+    }
 
   });
 
