--- a/components/polymer/src/features/mini/shadow.html
+++ b/components/polymer/src/features/mini/shadow.html
@@ -10,30 +10,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../lib/settings.html">
 <script>
   
-using(['Base', 'Settings'], function(Base, settings) {
-
   /**
     Implements `shadyRoot` compatible dom scoping using native ShadowDOM.
   */
 
   // Transform styles if not using ShadowDOM or if flag is set.
-  
 
-  if (settings.useShadow) {
+  if (Polymer.Settings.useShadow) {
 
-    Base.addFeature({
+    Polymer.Base.addFeature({
 
       // no-op's when ShadowDOM is in use
       _poolContent: function() {},
-
       _prepareContent: function() {},
-
       _composeTree: function() {},
-
       distributeContent: function() {},
 
-      // create a shadowRoot!
+      // create a shadowRoot
       _createLocalRoot: function() {
+        // native ShadowDOM method
         this.createShadowRoot();
         this.shadowRoot.appendChild(this.root);
         this.root = this.shadowRoot;
@@ -42,7 +37,5 @@ using(['Base', 'Settings'], function(Base, settings) {
     });
 
   }
-
-});
 
 </script>
