--- a/components/polymer/src/features/standard/notify-path.html
+++ b/components/polymer/src/features/standard/notify-path.html
@@ -58,9 +58,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * @class data feature: path notification
    */
 
-using(['Base', 'Annotations'], function(Base, Annotations) {
-
-  Base.addFeature({
+  Polymer.Base.addFeature({
     /**
       Notify that a path has changed. For example:
 
@@ -141,7 +139,7 @@ using(['Base', 'Annotations'], function(Base, Annotations) {
     // a fair amount of runtime lookup
     _pathEffector: function(path, value) {
       // get root property
-      var model = modelForPath(path);
+      var model = this._modelForPath(path);
       // search property effects of the root property for 'annotation' effects
       var fx$ = this._propertyEffects[model];
       if (fx$) {
@@ -248,26 +246,22 @@ using(['Base', 'Annotations'], function(Base, Annotations) {
     },
 
     _notifyPath: function(path, value) {
-      var rootName = modelForPath(path);
-      var dashCaseName = Annotations.camelToDashCase(rootName); 
-      var eventName = dashCaseName + EVENT_PATH_CHANGED;
+      var rootName = this._modelForPath(path);
+      var dashCaseName = Polymer.Annotations.camelToDashCase(rootName); 
+      var eventName = dashCaseName + this._EVENT_PATH_CHANGED;
       this.fire(eventName, { 
         path: path, 
         value: value 
       }, null, false);
-    }
+    },
+
+    _modelForPath: function(path) {
+      return path.split('.').shift();
+    },
+
+    _EVENT_CHANGED: '-changed',
+    _EVENT_PATH_CHANGED: '-path-changed'
 
   });
-
-  // TODO(sjmiles): needs a home
-  function modelForPath(path) {
-    return path.split('.').shift();
-  }
-
-  // TODO(sjmiles): should be imported from elsewhere
-  var EVENT_CHANGED = '-changed';
-  var EVENT_PATH_CHANGED = '-path' + EVENT_CHANGED;
-
-});
 
 </script>
