--- a/components/polymer/src/features/standard/styling.html
+++ b/components/polymer/src/features/standard/styling.html
@@ -7,41 +7,40 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
 <link rel="import" href="../../lib/style-util.html">
 <link rel="import" href="../../lib/resolve-url.html">
 <link rel="import" href="../../lib/style-transformer.html">
 <link rel="import" href="../../lib/settings.html">
+
 <script>
 
-  using(['Base', 'Annotations', 'StyleTransformer', 'StyleUtil', 'Settings', 
-    'ResolveUrl'], 
-    function(Base, Annotations, transformer, styleUtil, settings, resolver) {
-    
-    var prepTemplate = Base._prepTemplate;
-    var prepElement = Base._prepElement;
-    var stampTemplate = Base._stampTemplate;
+  (function() {
 
-    var domModule = document.createElement('dom-module');
+    var prepTemplate = Polymer.Base._prepTemplate;
+    var prepElement = Polymer.Base._prepElement;
+    var baseStampTemplate = Polymer.Base._stampTemplate;
 
-    Base.addFeature({
+    Polymer.Base.addFeature({
 
       // declaration-y
       _prepTemplate: function() {
         prepTemplate.call(this);
-        var port = domModule.import(this.is);
+        var port = Polymer.DomModule.import(this.is);
         if (this._encapsulateStyle === undefined) {
-          this._encapsulateStyle = Boolean(port && !settings.useNativeShadow);
+          this._encapsulateStyle = 
+            Boolean(port && !Polymer.Settings.useNativeShadow);
         }
         // scope css
         // NOTE: dom scoped via annotations
-        if (settings.useNativeShadow || this._encapsulateStyle) {
+        if (Polymer.Settings.useNativeShadow || this._encapsulateStyle) {
           this._scopeCss();
         }
       },
 
       _prepElement: function(element) {
         if (this._encapsulateStyle) {
-          transformer.element(element, this.is);
+          Polymer.StyleTransformer.element(element, this.is);
         }
         prepElement.call(this, element);
       },
@@ -62,7 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           modules.push(this.is);
         }
         for (var i=0, l=modules.length, n, m; (i<l) && (n=modules[i]); i++) {
-          m = domModule.import(n);
+          m = Polymer.DomModule.import(n);
           if (m) {
             styles = styles.concat(Array.prototype.slice.call(
               m._styles ? m._styles : m.querySelectorAll('style')));
@@ -87,8 +86,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             // TODO(sorvell): currently only needed in native since we rely
             // on HTMLImports polyfill otherwise; if we move styles into
             // templates, this will always be required.
-            if (settings.useNativeImports) {
-              s.textContent = resolver.resolveCss(s.textContent, 
+            if (Polymer.Settings.useNativeImports) {
+              s.textContent = Polymer.ResolveUrl.resolveCss(s.textContent, 
                 s.ownerDocument);
             }
             m._styles.push(s);
@@ -103,18 +102,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _scopeStyles: function(styles) {
         for (var i=0, l=styles.length, s; (i<l) && (s=styles[i]); i++) {
           // transform style if necessary and place in correct place
-          if (settings.useNativeShadow) {
+          if (Polymer.Settings.useNativeShadow) {
             this._template.content.appendChild(s);
           } else {
             var rules = this._rulesForStyle(s);
-            styleUtil.applyCss(transformer.css(rules, this.is), this.is);
+            Polymer.StyleUtil.applyCss(
+              Polymer.StyleTransformer.css(rules, this.is), 
+              this.is
+            );
           }
         }
       },
 
       _rulesForStyle: function(style) {
         if (!style.__cssRules) {
-          style.__cssRules = styleUtil.parser.parse(style.textContent);
+          style.__cssRules = Polymer.StyleUtil.parser.parse(style.textContent);
         }
         return style.__cssRules;
       },
@@ -122,26 +124,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       // instance-y
       _stampTemplate: function() {
         if (this._encapsulateStyle) {
-          transformer.host(this, this.is);
+          Polymer.StyleTransformer.host(this, this.is);
         }
-        stampTemplate.call(this);
+        baseStampTemplate.call(this);
       },
 
       // add scoping class whenever an element is added to localDOM
       _elementAdd: function(node) {
         if (this._encapsulateStyle && !node.__styleScoped) {
-          transformer.dom(node, this.is);
+          Polymer.StyleTransformer.dom(node, this.is);
         }
       },
 
       // remove scoping class whenever an element is removed from localDOM
       _elementRemove: function(node) {
         if (this._encapsulateStyle) {
-          transformer.dom(node, '');
+          Polymer.StyleTransformer.dom(node, '');
         }
       }
 
     });
 
-  });
+  })();
+
 </script>
