--- a/components/polymer/src/features/standard/utils.html
+++ b/components/polymer/src/features/standard/utils.html
@@ -13,9 +13,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-using(['Base', 'Async', 'Debounce'], function(Base, Async, Debounce) {
-
-  Base.addFeature({
+  Polymer.Base.addFeature({
 
     $$: function(slctr) {
       return this.root.querySelector(slctr);
@@ -69,11 +67,11 @@ using(['Base', 'Async', 'Debounce'], function(Base, Async, Debounce) {
     },
 
     async: function(method, waitTime) {
-      return Async.run(method.bind(this), waitTime);
+      return Polymer.Async.run(method.bind(this), waitTime);
     },
 
     cancelAsync: function(handle) {
-      Async.cancel(handle);
+      Polymer.Async.cancel(handle);
     },
 
     queryHost: function(node) {
@@ -133,11 +131,9 @@ using(['Base', 'Async', 'Debounce'], function(Base, Async, Debounce) {
     },
 
     _debounce: function(job, callback, wait) {
-      this[job] = Debounce.call(this, this[job], callback, wait);
+      this[job] = Polymer.Debounce.call(this, this[job], callback, wait);
     }
 
   });
-
-});
 
 </script>
