--- a/components/polymer/src/lib/async.html
+++ b/components/polymer/src/lib/async.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <script>
 
-modulate('Async', function() {
+Polymer.Async = (function() {
   
   var currVal = 0;
   var lastVal = 0;
@@ -63,6 +63,6 @@ modulate('Async', function() {
     cancel: cancelAsync
   };
   
-});
+})();
 
 </script>
