--- a/components/polymer/src/lib/css-parse.html
+++ b/components/polymer/src/lib/css-parse.html
@@ -4,7 +4,7 @@
   Extremely simple css parser. Intended to be not more than what we need
   and definitely not necessarly correct =).
 */
-modulate('CssParse', function() {
+(function() {
 
   // given a string of css, return a simple rule tree
   function parse(text) {
@@ -121,11 +121,11 @@ modulate('CssParse', function() {
   };
 
   // exports 
-  return {
+  Polymer.CssParse = {
     parse: parse,
     stringify: stringify
   };
 
-});
+})();
 
 </script>
