--- a/components/polymer/src/lib/debounce.html
+++ b/components/polymer/src/lib/debounce.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <script>
 
-modulate('Debounce', 'Async', function(Async) {
+Polymer.Debounce = (function() {
   
   // usage
   
@@ -20,6 +20,8 @@ modulate('Debounce', 'Async', function(Async) {
   //
   // returns a handle which can be used to re-register a job
 
+  var Async = Polymer.Async;
+  
   var Debouncer = function(context) {
     this.context = context;
     this.boundComplete = this.complete.bind(this);
@@ -62,6 +64,6 @@ modulate('Debounce', 'Async', function(Async) {
 
   return debounce;
   
-});
+})();
 
 </script>
