--- a/components/polymer/src/lib/dom-api.html
+++ b/components/polymer/src/lib/dom-api.html
@@ -10,7 +10,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="settings.html">
 <script>
 
-  modulate('DomApi', ['Debounce', 'Settings'], function(Debounce, settings) {
+  Polymer.DomApi = (function() {
+
+    var Debounce = Polymer.Debounce;
+    var Settings = Polymer.Settings;
 
     var DomApi = function() {
       this._dirty = [];
@@ -307,7 +310,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             
     }; 
 
-    if (settings.useShadow) {
+    if (Settings.useShadow) {
 
       DomApi.prototype.querySelectorAll = function(selector, node) {
         node = node || document;
@@ -354,6 +357,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       matchesSelector: matchesSelector
     };
 
-  });
+  })();
 
 </script>
