--- a/components/polymer/src/lib/style-transformer.html
+++ b/components/polymer/src/lib/style-transformer.html
@@ -7,10 +7,12 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
 <link rel="import" href="style-util.html">
+
 <script>
 
-  modulate('StyleTransformer', ['StyleUtil'], function(styleUtil) {
+  (function() {
 
     /* Transforms ShadowDOM styling into ShadyDOM styling
 
@@ -63,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     // a class created from the scope. ShadowDOM selectors are also transformed
     // (e.g. :host) to use the scoping selector.
     function transformCss(rules, scope, callback) {
-      return styleUtil.toCssText(rules, function(rule) {
+      return Polymer.StyleUtil.toCssText(rules, function(rule) {
         transformRule(rule, scope);
         if (callback) {
           callback(rule, scope);
@@ -147,7 +149,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     var SCOPING_CLASS = /(?:^|\s)([\S]*?-x)(?:$|\s)/;
 
     // exports
-    return {
+    Polymer.StyleTransformer = {
       element: transformElement,
       dom: transformDom,
       host: transformHost,
@@ -155,5 +157,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       SCOPE_SUFFIX: SCOPE_SUFFIX
     };
 
-  });
+  })();
+
 </script>
