--- a/components/polymer/src/lib/style-util.html
+++ b/components/polymer/src/lib/style-util.html
@@ -7,19 +7,21 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
 <link rel="import" href="css-parse.html">
+
 <script>
 
-  modulate('StyleUtil', ['CssParse'], function(parser) {
+  (function() {
 
     function toCssText(rules, callback) {
       if (typeof rules === 'string') {
-        rules = parser.parse(rules);
+        rules = Polymer.CssParse.parse(rules);
       } 
       if (callback) {
         forEachStyleRule(rules, callback);
       }
-      return parser.stringify(rules);
+      return Polymer.CssParse.stringify(rules);
     }
 
     function forEachStyleRule(node, cb) {
@@ -60,12 +62,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     var MIXIN_SELECTOR = '--';
 
     // exports
-    return {
-      parser: parser,
+    Polymer.StyleUtil = {
+      parser: Polymer.CssParse,
       applyCss: applyCss,
       forEachStyleRule: forEachStyleRule,
       toCssText: toCssText
     };
 
-  });
+  })();
+
 </script>
