--- a/components/polymer/src/lib/template/templatizer.html
+++ b/components/polymer/src/lib/template/templatizer.html
@@ -10,9 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-modulate('Templatizer', ['Base', 'Annotations'], function(Base, Annotations) {
-
-  Templatizer = {
+  Polymer.Templatizer = {
 
     templatize: function(template) {
       // TODO(sjmiles): supply _alternate_ content reference missing from root
@@ -29,7 +27,7 @@ modulate('Templatizer', ['Base', 'Annotations'], function(Base, Annotations) {
       }
       // `archetype` is the prototype of the anonymous
       // class created by the templatizer 
-      var archetype = Object.create(Base);
+      var archetype = Object.create(Polymer.Base);
       // normally Annotations.parseAnnotations(template) but
       // archetypes do special caching
       this.customPrepAnnotations(archetype, template);
@@ -67,12 +65,13 @@ modulate('Templatizer', ['Base', 'Annotations'], function(Base, Annotations) {
         var c = template._content;
         if (c) {
           if (this.host) {
-            Annotations.prepElement = this.host._prepElement.bind(this.host);
+            Polymer.Annotations.prepElement = 
+              this.host._prepElement.bind(this.host);
           }
           archetype._annotes = c._annotes ||
-            Annotations.parseAnnotations(template);
+            Polymer.Annotations.parseAnnotations(template);
           c._annotes = archetype._annotes;
-          Annotations.prepElement = null;
+          Polymer.Annotations.prepElement = null;
         } 
         else {
           console.warn('no _content');
@@ -114,9 +113,5 @@ modulate('Templatizer', ['Base', 'Annotations'], function(Base, Annotations) {
     }
 
   };
-
-  return Templatizer;
-
-});
 
 </script>
