--- a/components/polymer/src/lib/template/x-template.html
+++ b/components/polymer/src/lib/template/x-template.html
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     extends: 'template',
 
     mixins: [
-      'Templatizer'
+      Polymer.Templatizer
     ],
 
     ready: function() {
