--- a/components/polymer/src/expr/polymer-expr.html
+++ b/components/polymer/src/expr/polymer-expr.html
@@ -21,34 +21,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-  using('Base', function(Base) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    registerFeatures: function() {
+      this._prepMixins();
+      this._prepExtends();
+      this._prepConstructor();
+      this._prepTemplate();
+      this._prepAnnotations();
+      this._prepEffects();
+      this._prepContent();
+    },
 
-      registerFeatures: function() {
-        this._prepMixins();
-        this._prepExtends();
-        this._prepConstructor();
-        this._prepTemplate();
-        this._prepAnnotations();
-        this._prepEffects();
-        this._prepContent();
-      },
-
-      initFeatures: function() {
-        this._poolContent();
-        this._pushHost();
-        this._setupConfigure();
-        this._stampTemplate();
-        this._marshalAnnotationReferences();
-        this._popHost();
-        this._marshalInstanceEffects();
-        this._marshalAttributes();
-        this._marshalListeners();
-        this._readyContent();
-      }
-
-    });
+    initFeatures: function() {
+      this._poolContent();
+      this._pushHost();
+      this._setupConfigure();
+      this._stampTemplate();
+      this._marshalAnnotationReferences();
+      this._popHost();
+      this._marshalInstanceEffects();
+      this._marshalAttributes();
+      this._marshalListeners();
+      this._readyContent();
+    }
 
   });
 
