--- a/components/polymer/src/features/micro/attributes.html
+++ b/components/polymer/src/features/micro/attributes.html
@@ -55,134 +55,121 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * @class base feature: attributes
    */
   
-  using(['Base', 'Annotations'], function(Base, Annotations) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    _marshalAttributes: function() {
+      this._takeAttributes();
+      this._installHostAttributes(this.hostAttributes);
+    },
 
-      _marshalAttributes: function() {
-        this._takeAttributes();
-        this._installHostAttributes(this.hostAttributes);
-      },
-
-      _installHostAttributes: function(attributes) {
-        if (attributes) {
-          this.cloneAttributes(this, attributes);
-        }
-      },
-
-      cloneAttributes: function(node, attr$) {
-        attr$.split(' ').forEach(function(a) {
-          node.setAttribute(a, '');
-        });
-      },
-
-      _takeAttributes: function() {
-        this._takeAttributesToModel(this);
-      },
-
-      _takeAttributesToModel: function(model) {
-        for (var propName in this.properties) {
-          var type = this.getPropertyType(propName);
-          var attrName = Annotations.camelToDashCase(propName);
-          if (type && this.hasAttribute(attrName)) {
-            var val = this.getAttribute(attrName);
-            model[propName] = this.deserialize(val, type);
-          }
-        }
-      },
-
-      setAttributeToProperty: function(model, attrName) {
-        // Don't deserialize back to property if currently reflecting
-        if (!this._serializing) {
-          var propName = Annotations.dashToCamelCase(attrName);
-          var type = this.getPropertyType(propName);
-          if (type) {
-            var val = this.getAttribute(attrName);
-            model[propName] = this.deserialize(val, type);
-          }
-        }
-      },
-
-      deserialize: function(value, type) {
-        switch (type) {
-
-          case Number:
-            value = Number(value);
-            break;
-
-          case Boolean:
-            value = (value !== null);
-            break;
-
-          case Object:
-          case Array:
-            try {
-              value = JSON.parse(value);
-            } catch(x) {
-              value = '[invalid JSON]';
-            }
-            break;
-
-          case Date:
-            value = new Date(value);
-            break;
-
-          case String:
-          default:
-            break;
-
-        }
-        return value;
-
-      },
-
-      serialize: function(value) {
-        switch (typeof value) {
-
-          case 'boolean':
-            return value ? '' : undefined;
-
-          case 'object':
-            if (value instanceof Date) {
-              return value;
-            } else if (value) {
-              try {
-                return JSON.stringify(value);
-              } catch(x) {
-                return '';
-              }
-            }
-
-          default:
-            return value != null ? value : undefined;
-
-        }
-      },
-
-      _serializing: false,
-      reflectPropertyToAttribute: function(name) {
-        this._serializing = true;
-        this.serializeValueToAttribute(this[name], name);
-        this._serializing = false;
-      },
-
-      serializeValueToAttribute: function(value, attribute, node) {
-        value = this.serialize(value);
-        (node || this)[value === undefined ? 'removeAttribute' : 'setAttribute'](
-          this.camelToDashCase(attribute), value
-        );
-      },
-
-      // TODO(sjmiles): duplicate of function in Annotations library
-      camelToDashCase: function(camel) {
-        return camel.replace(/([a-z][A-Z])/g, 
-          function (g) { 
-            return g[0] + '-' + g[1].toLowerCase() 
-          }
-        );
+    _installHostAttributes: function(attributes) {
+      if (attributes) {
+        this.cloneAttributes(this, attributes);
       }
+    },
 
-    });
+    cloneAttributes: function(node, attr$) {
+      attr$.split(' ').forEach(function(a) {
+        node.setAttribute(a, '');
+      });
+    },
+
+    _takeAttributes: function() {
+      this._takeAttributesToModel(this);
+    },
+
+    _takeAttributesToModel: function(model) {
+      for (var propName in this.properties) {
+        var type = this.getPropertyType(propName);
+        var attrName = Polymer.Annotations.camelToDashCase(propName);
+        if (type && this.hasAttribute(attrName)) {
+          var val = this.getAttribute(attrName);
+          model[propName] = this.deserialize(val, type);
+        }
+      }
+    },
+
+    setAttributeToProperty: function(model, attrName) {
+      // Don't deserialize back to property if currently reflecting
+      if (!this._serializing) {
+        var propName = Polymer.Annotations.dashToCamelCase(attrName);
+        var type = this.getPropertyType(propName);
+        if (type) {
+          var val = this.getAttribute(attrName);
+          model[propName] = this.deserialize(val, type);
+        }
+      }
+    },
+
+    _serializing: false,
+    reflectPropertyToAttribute: function(name) {
+      this._serializing = true;
+      this.serializeValueToAttribute(this[name], name);
+      this._serializing = false;
+    },
+
+    serializeValueToAttribute: function(value, attribute, node) {
+      var str = this.serialize(value);
+      (node || this)
+        [str === undefined ? 'removeAttribute' : 'setAttribute']
+          (Polymer.Annotations.camelToDashCase(attribute), str);
+    },
+
+    deserialize: function(value, type) {
+      switch (type) {
+
+        case Number:
+          value = Number(value);
+          break;
+
+        case Boolean:
+          value = (value !== null);
+          break;
+
+        case Object:
+        case Array:
+          try {
+            value = JSON.parse(value);
+          } catch(x) {
+            value = '[invalid JSON]';
+          }
+          break;
+
+        case Date:
+          value = new Date(value);
+          break;
+
+        case String:
+        default:
+          break;
+
+      }
+      return value;
+
+    },
+
+    serialize: function(value) {
+      switch (typeof value) {
+
+        case 'boolean':
+          return value ? '' : undefined;
+
+        case 'object':
+          if (value instanceof Date) {
+            return value;
+          } else if (value) {
+            try {
+              return JSON.stringify(value);
+            } catch(x) {
+              return '';
+            }
+          }
+
+        default:
+          return value != null ? value : undefined;
+
+      }
+    }
 
   });
 
