--- a/components/polymer/src/features/micro/mixins.html
+++ b/components/polymer/src/features/micro/mixins.html
@@ -9,47 +9,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <script>
 
-  using('Base', function(Base) {
+  /**
+   * Automatically extend using objects referenced in `mixins` array. 
+   * 
+   *     Polymer({
+   *     
+   *       mixins: [
+   *         someMixinObject
+   *       ]
+   *     
+   *       ...
+   *     
+   *     });
+   * 
+   * @class base feature: mixins
+   */
 
-    /**
-     * Automatically extend using objects referenced in `mixins`
-     * array of the protoype. 
-     * 
-     * If the mixin is String-valued, the corresponding Polymer module
-     * is mixed in.
-     *
-     *     Polymer({
-     *     
-     *       mixins: [
-     *         someObject,
-     *         'PolymerMixinModuleName'
-     *       ]
-     *     
-     *       ...
-     *     
-     *     });
-     * 
-     * @class base feature: mixins
-     */
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
-
-      _prepMixins: function() {
-        if (this.mixins) {
-          var host = this;
-          this.mixins.forEach(function(m) {
-            if (typeof m === 'string') {
-              using(m, function(m) {
-                Base.extend(host, m);
-              });
-            } else {
-              Base.extend(host, m);
-            }
-          });
-        }
+    _prepMixins: function() {
+      if (this.mixins) {
+        this.mixins.forEach(function(m) {
+          Polymer.Base.extend(this, m);
+        }, this);
       }
-
-    });
+    }
 
   });
 
