--- a/components/polymer/src/features/micro/properties.html
+++ b/components/polymer/src/features/micro/properties.html
@@ -9,92 +9,87 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <script>
 
+  /**
+   * Define property metadata.
+   *
+   *     properties: {
+   *       <property>: <Type || Object>,
+   *       ...
+   *     }
+   * 
+   * Example:
+   * 
+   *     properties: {
+   *       // `foo` property can be assigned via attribute, will be deserialized to
+   *       // the specified data-type. All `properties` properties have this behavior.
+   *       foo: String,
+   *
+   *       // `bar` property has additional behavior specifiers.
+   *       //   type: as above, type for (de-)serialization
+   *       //   notify: true to send a signal when a value is set to this property
+   *       //   reflect: true to serialize the property to an attribute
+   *       //   readOnly: if true, the property has no setter
+   *       bar: {
+   *         type: Boolean,
+   *         notify: true
+   *       }
+   *     }
+   *
+   * By itself the properties feature doesn't do anything but provide property
+   * information. Other features use this information to control behavior.
+   *
+   * The `type` information is used by the `attributes` feature to convert
+   * String values in attributes to typed properties. The `bind` feature uses 
+   * property information to control property access.
+   *
+   * Marking a property as `notify` causes a change in the property to
+   * fire a non-bubbling event called `<property>-changed`. Elements that
+   * have enabled two-way binding to the property use this event to
+   * observe changes.
+   *
+   * `readOnly` properties have a getter, but no setter. To set a read-only
+   * property, use the private setter method `_set_<property>(value)`.
+   *
+   * @class base feature: properties
+   */
 
-  using('Base', function(Base) {
+  // null object
+  Polymer.nob = Object.create(null);
+  
+  Polymer.Base.addFeature({
 
+    properties: {
+    },
 
-    /**
-     * Define property metadata.
-     *
-     *     properties: {
-     *       <property>: <Type || Object>,
-     *       ...
-     *     }
-     * 
-     * Example:
-     * 
-     *     properties: {
-     *       // `foo` property can be assigned via attribute, will be deserialized to
-     *       // the specified data-type. All `properties` properties have this behavior.
-     *       foo: String,
-     *
-     *       // `bar` property has additional behavior specifiers.
-     *       //   type: as above, type for (de-)serialization
-     *       //   notify: true to send a signal when a value is set to this property
-     *       //   reflect: true to serialize the property to an attribute
-     *       //   readOnly: if true, the property has no setter
-     *       bar: {
-     *         type: Boolean,
-     *         notify: true
-     *       }
-     *     }
-     *
-     * By itself the properties feature doesn't do anything but provide property
-     * information. Other features use this information to control behavior.
-     *
-     * The `type` information is used by the `attributes` feature to convert
-     * String values in attributes to typed properties. The `bind` feature uses 
-     * property information to control property access.
-     *
-     * Marking a property as `notify` causes a change in the property to
-     * fire a non-bubbling event called `<property>-changed`. Elements that
-     * have enabled two-way binding to the property use this event to
-     * observe changes.
-     *
-     * `readOnly` properties have a getter, but no setter. To set a read-only
-     * property, use the private setter method `_set_<property>(value)`.
-     *
-     * @class base feature: properties
-     */
+    getPropertyInfo: function(property) {
+      return this._getPropertyInfo(property, this.properties);
+    },
 
-    Base.addFeature({
-
-      properties: {
-      },
-
-      nob: Object.create(null),
-
-      getPropertyInfo: function(property) {
-        return this._getPropertyInfo(property, this.properties);
-      },
-
-      _getPropertyInfo: function(property, properties) {
-        var p = properties[property];
-        if (typeof(p) === 'function') {
-          p = properties[property] = {
-            type: p
-          };
-        }
-        return p || Base.nob;
-      },
-
-      getPropertyType: function(property) {
-        return this.getPropertyInfo(property).type;
-      },
-
-      isReadOnlyProperty: function(property) {
-        return this.getPropertyInfo(property).readOnly;
-      },
-
-      isNotifyProperty: function(property) {
-        return this.getPropertyInfo(property).notify;
-      },
-
-      isReflectedProperty: function(property) {
-        return this.getPropertyInfo(property).reflect;
+    _getPropertyInfo: function(property, properties) {
+      var p = properties[property];
+      if (typeof(p) === 'function') {
+        p = properties[property] = {
+          type: p
+        };
       }
+      return p || Polymer.nob;
+    },
 
-    });
+    getPropertyType: function(property) {
+      return this.getPropertyInfo(property).type;
+    },
+
+    isReadOnlyProperty: function(property) {
+      return this.getPropertyInfo(property).readOnly;
+    },
+
+    isNotifyProperty: function(property) {
+      return this.getPropertyInfo(property).notify;
+    },
+
+    isReflectedProperty: function(property) {
+      return this.getPropertyInfo(property).reflect;
+    }
 
   });
 
