--- a/components/polymer/src/features/mini/ready.html
+++ b/components/polymer/src/features/mini/ready.html
@@ -10,7 +10,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <script>
 
   /**
-   *
    * Provides `ready` lifecycle callback which is called parent to child.
    *
    * This can be useful in a number of cases. Here are some examples:
@@ -30,95 +29,91 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * @class standard feature: ready
    */
 
-  using('Base', function(Base) {
+  Polymer.Base.addFeature({
 
-    hostStack = [];
+    hostStack: [],
 
-    Base.addFeature({
+    // for overriding
+    configure: function() {
+    },
 
-      // for overriding
-      configure: function() {
-      },
+    // for overriding
+    ready: function() {
+    },
 
-      // for overriding
-      ready: function() {
-      },
+    queryHost: function() {
+      return this.host;
+    },
 
-      queryHost: function() {
-        return this.host;
-      },
+    // 1. set this element's `host` and push this element onto the `host`'s
+    // list of `client` elements
+    // 2. establish this element as the current hosting element (allows 
+    // any elements we stamp to easily set host to us).
+    _pushHost: function() {
+      this.host = Polymer.Base.hostStack[Polymer.Base.hostStack.length-1];
+      if (this.host) {
+        this.host._clients.push(this);
+      }
+      if (!this._clients) {
+        this._clients = [];
+      }
+      this._beginHost();
+    },
 
-      // 1. set this element's `host` and push this element onto the `host`'s
-      // list of `client` elements
-      // 2. establish this element as the current hosting element (allows 
-      // any elements we stamp to easily set host to us).
-      _pushHost: function() {
-        this.host = hostStack[hostStack.length-1];
-        if (this.host) {
-          this.host._clients.push(this);
-        }
-        if (!this._clients) {
-          this._clients = [];
-        }
-        this._beginHost();
-      },
+    _beginHost: function() {
+      Polymer.Base.hostStack.push(this);
+    },
 
-      _beginHost: function() {
-        hostStack.push(this);
-      },
+    _popHost: function() {
+      // this element is no longer the current hosting element
+      Polymer.Base.hostStack.pop();
+    },
 
-      _popHost: function() {
-        // this element is no longer the current hosting element
-        hostStack.pop();
-      },
+    _readyContent: function() {
+      if (this._canReady()) {
+        this._initializeContent();
+      }
+    },
 
-      _readyContent: function() {
-        if (this._canReady()) {
-          this._initializeContent();
-        }
-      },
+    _canReady: function() {
+      return !this._readied && (!this.host || this.host._readied);
+    },
 
-      _canReady: function() {
-        return !this._readied && (!this.host || this.host._readied);
-      },
+    // TODO(sorvell): can this be collapsed with _distributeContent?
+    _initializeContent: function() {
+      // prepare root
+      this._setupRoot();
+      // logically distribute self
+      this._prepareContent();
+      // send data configuration signal
+      this._configure();
+      // now fully prepare localChildren
+      var c$ = this._getDistributionClients();
+      for (var i=0, l= c$.length, c; (i<l) && (c=c$[i]); i++) {
+        c._initializeContent();
+      }
+      // perform actual dom composition
+      this._composeContent();
+      // send ready signal
+      this._ready();
+    },
 
-      // TODO(sorvell): can this be collapsed with _distributeContent?
-      _initializeContent: function() {
-        // prepare root
-        this._setupRoot();
-        // logically distribute self
-        this._prepareContent();
-        // send data configuration signal
-        this._configure();
-        // now fully prepare localChildren
-        var c$ = this._getDistributionClients();
-        for (var i=0, l= c$.length, c; (i<l) && (c=c$[i]); i++) {
-          c._initializeContent();
-        }
-        // perform actual dom composition
-        this._composeContent();
-        // send ready signal
-        this._ready();
-      },
+    // calls `configure`
+    // note: called host -> localChild
+    _configure: function() {
+      this.configure();
+    },
 
-      // calls `configure`
-      // note: called host -> localChild
-      _configure: function() {
-        this.configure();
-      },
+    // mark readied and call `ready`
+    // note: called localChildren -> host
+    _ready: function() {
+      this._readied = true;
+      this._beforeReady();
+      this.ready();
+    },
 
-      // mark readied and call `ready`
-      // note: called localChildren -> host
-      _ready: function() {
-        this._readied = true;
-        this._beforeReady();
-        this.ready();
-      },
-
-      // for system overriding
-      _beforeReady: function() {},
-
-    });
+    // for system overriding
+    _beforeReady: function() {}
 
   });
 
