--- a/components/polymer/src/features/mini/template.html
+++ b/components/polymer/src/features/mini/template.html
@@ -15,50 +15,45 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * The `template` feature locates and instances a `<template>` element
    * corresponding to the current Polymer prototype.
    * 
-   * As of this writing, the `<template>` element must be immediately
-   * preceeding the script that invokes `Polymer()`. This is not the final
-   * API.
+   * The `<template>` element may be immediately preceeding the script that 
+   * invokes `Polymer()`.
    *  
    * @class standard feature: template
    */
   
-  using('Base', function(Base) {
+  Polymer.Base.addFeature({
 
-    var domModule = document.createElement('dom-module');
-
-    Base.addFeature({
-
-      _prepTemplate: function() {
-        // locate template using dom-module
-        this._template = this._template || domModule.import(this.is, 'template');
-        // fallback to look at the node previous to the currentScript.
-        if (!this._template) {
-          var script = document._currentScript || document.currentScript;
-          var prev = script && script.previousElementSibling;
-          if (prev && prev.localName === 'template') {
-            this._template = prev;
-          }
+    _prepTemplate: function() {
+      // locate template using dom-module
+      this._template = 
+        this._template || Polymer.DomModule.import(this.is, 'template');
+      // fallback to look at the node previous to the currentScript.
+      if (!this._template) {
+        var script = document._currentScript || document.currentScript;
+        var prev = script && script.previousElementSibling;
+        if (prev && prev.localName === 'template') {
+          this._template = prev;
         }
-      },
-
-      _stampTemplate: function() {
-        if (this._template) {
-          // note: root is now a fragment which can be manipulated
-          // while not attached to the element.
-          this.root = this.instanceTemplate(this._template);
-        }
-      },
-
-      instanceTemplate: function(template) {
-        var dom = document.importNode(template._content || template.content, true);
-        // TODO(sjmiles): hello prollyfill
-        if (window.CustomElements && CustomElements.upgradeSubtree) {
-          CustomElements.upgradeSubtree(dom);
-        }
-        return dom;
       }
+    },
 
-    });
+    _stampTemplate: function() {
+      if (this._template) {
+        // note: root is now a fragment which can be manipulated
+        // while not attached to the element.
+        this.root = this.instanceTemplate(this._template);
+      }
+    },
+
+    instanceTemplate: function(template) {
+      var dom = 
+        document.importNode(template._content || template.content, true);
+      // TODO(sjmiles): hello prollyfill
+      if (window.CustomElements && CustomElements.upgradeSubtree) {
+        CustomElements.upgradeSubtree(dom);
+      }
+      return dom;
+    }
 
   });
 
