--- a/components/polymer/src/features/standard/annotations.html
+++ b/components/polymer/src/features/standard/annotations.html
@@ -113,83 +113,81 @@ TODO(sjmiles): this module should produce either syntactic metadata
 
 */
 
-  using(['Base', 'Annotations', 'ResolveUrl'], 
-    function(Base, Annotations, resolver) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    // registration-time
 
-      // registration-time
+    _prepAnnotations: function() {
+      if (!this._template) {
+        this._annotes = [];
+      } else {
+        // TODO(sorvell): ad hoc method of plugging behavior into Annotations
+        Polymer.Annotations.prepElement = this._prepElement.bind(this);
+        this._annotes = Polymer.Annotations.parseAnnotations(this._template);
+        Polymer.Annotations.prepElement = null;
+      }
+    },
 
-      _prepAnnotations: function() {
-        // TODO(sorvell): ad hoc method of plugging behavior into Annotations.
-        Annotations.prepElement = this._prepElement.bind(this);
-        this._annotes = !this._template ? [] 
-          : Annotations.parseAnnotations(this._template);
-        Annotations.prepElement = null;
-      },
+    _prepElement: function(element) {
+      Polymer.ResolveUrl.resolveAttrs(element, this._template.ownerDocument);
+    },
 
-      _prepElement: function(element) {
-        resolver.resolveAttrs(element, this._template.ownerDocument);
-      },
+    // instance-time
 
-      // instance-time
+    findAnnotatedNode: Polymer.Annotations.findAnnotatedNode,
 
-      findAnnotatedNode: Annotations.findAnnotatedNode,
+    // marshal all teh things
+    _marshalAnnotationReferences: function() {
+      if (this._template) {
+        this._marshalTemplateContent();
+        this._marshalIdNodes();
+        this._marshalAnnotatedNodes();
+        this._marshalAnnotatedListeners();
+      }
+    }, 
 
-      // marshal all teh things
-      _marshalAnnotationReferences: function() {
-        if (this._template) {
-          this._marshalTemplateContent();
-          this._marshalIdNodes();
-          this._marshalAnnotatedNodes();
-          this._marshalAnnotatedListeners();
+    // nested template contents have been stored prototypically to avoid 
+    // unnecessary duplication, here we put references to the 
+    // indirected contents onto the nested template instances
+    _marshalTemplateContent: function() {
+      this._annotes.forEach(function(note) {
+        if (note.templateContent) {
+          var template = this.findAnnotatedNode(this.root, note);
+          template._content = note.templateContent;
         }
-      }, 
+      }, this);
+    },
 
-      // nested template contents have been stored prototypically to avoid 
-      // unnecessary duplication, here we put references to the 
-      // indirected contents onto the nested template instances
-      _marshalTemplateContent: function() {
-        this._annotes.forEach(function(note) {
-          if (note.templateContent) {
-            var template = this.findAnnotatedNode(this.root, note);
-            template._content = note.templateContent;
-          }
-        }, this);
-      },
-
-      // construct `$` map (from id annotations)
-      _marshalIdNodes: function() {
-        this.$ = {};
-        this._annotes.forEach(function(a) {
-          if (a.id) {
-            this.$[a.id] = Annotations.findAnnotatedNode(this.root, a);
-          }
-        }, this);
-      },
-
-      // concretize `_nodes` map (from anonymous annotations)
-      _marshalAnnotatedNodes: function() {
-        if (this._nodes) {
-          this._nodes = this._nodes.map(function(a) {
-            return Annotations.findAnnotatedNode(this.root, a);
-          }, this);
+    // construct `$` map (from id annotations)
+    _marshalIdNodes: function() {
+      this.$ = {};
+      this._annotes.forEach(function(a) {
+        if (a.id) {
+          this.$[a.id] = this.findAnnotatedNode(this.root, a);
         }
-      },
+      }, this);
+    },
 
-      // install event listeners (from event annotations)
-      _marshalAnnotatedListeners: function() {
-        this._annotes.forEach(function(a) {
-          if (a.events && a.events.length) {
-            var node = Annotations.findAnnotatedNode(this.root, a);
-            a.events.forEach(function(e) {
-              this.listen(node, e.name, e.value);
-            }, this);
-          }
+    // concretize `_nodes` map (from anonymous annotations)
+    _marshalAnnotatedNodes: function() {
+      if (this._nodes) {
+        this._nodes = this._nodes.map(function(a) {
+          return this.findAnnotatedNode(this.root, a);
         }, this);
       }
+    },
 
-    });
+    // install event listeners (from event annotations)
+    _marshalAnnotatedListeners: function() {
+      this._annotes.forEach(function(a) {
+        if (a.events && a.events.length) {
+          var node = this.findAnnotatedNode(this.root, a);
+          a.events.forEach(function(e) {
+            this.listen(node, e.name, e.value);
+          }, this);
+        }
+      }, this);
+    }
 
   });
 
