--- a/components/polymer/src/features/standard/configure.html
+++ b/components/polymer/src/features/standard/configure.html
@@ -41,123 +41,119 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   directly (on-foo-changed).
   */
 
-  using(['Base'], function(Base) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    // storage for configuration
+    _setupConfigure: function(initialConfig) {
+      this._config = initialConfig || {};
+      this._handlers = [];
+    },
 
-      // storage for configuration
-      _setupConfigure: function(initialConfig) {
-        this._config = initialConfig || {};
-        this._handlers = [];
-      },
+    // static attributes are deserialized into _config
+    _takeAttributes: function() {
+      this._takeAttributesToModel(this._config);
+    },
 
-      // static attributes are deserialized into _config
-      _takeAttributes: function() {
-        this._takeAttributesToModel(this._config);
-      },
+    // at configure time values are stored in _config
+    _configValue: function(name, value) {
+      this._config[name] = value;
+    },
 
-      // at configure time values are stored in _config
-      _configValue: function(name, value) {
-        this._config[name] = value;
-      },
-
-      // configure: returns user supplied default property values
-      // combines with _config to create final property values
-      _configure: function() {
-        this._beforeConfigure();
-        var i;
-        // get individual default values from property config
-        var config = {};
-        for (i in this.properties) {
-          var c = this.properties[i];
-          if (c.value !== undefined) {
-            if (typeof c.value == 'function') {
-              config[i] = c.value.call(this, this._config);
-            } else {
-              config[i] = c.value;
-            }
+    // configure: returns user supplied default property values
+    // combines with _config to create final property values
+    _configure: function() {
+      this._beforeConfigure();
+      var i;
+      // get individual default values from property config
+      var config = {};
+      for (i in this.properties) {
+        var c = this.properties[i];
+        if (c.value !== undefined) {
+          if (typeof c.value == 'function') {
+            config[i] = c.value.call(this, this._config);
+          } else {
+            config[i] = c.value;
           }
         }
-        // get add'l default values from central configure 
-        mixin(config, this.configure(this._config));
-        // combine defaults returned from configure with inputs in _config
-        mixin(config, this._config);
-        // this is the new _config, which are the final values to be applied
-        this._config = config;
-        // pass configuration data to bindings
-        this._distributeConfig(this._config);
-      },
+      }
+      // get add'l default values from central configure 
+      this.simpleMixin(config, this.configure(this._config));
+      // combine defaults returned from configure with inputs in _config
+      this.simpleMixin(config, this._config);
+      // this is the new _config, which are the final values to be applied
+      this._config = config;
+      // pass configuration data to bindings
+      this._distributeConfig(this._config);
+    },
 
-      // system override point
-      _beforeConfigure: function() {},
+    // TODO(sorvell): simple version of mixin; should go elsewhere
+    simpleMixin: function(a, b) {
+      for (var i in b) {
+        a[i] = b[i];
+      }
+    },
 
-      // distribute config values to bound nodes.
-      _distributeConfig: function(config) {
-        var fx$ = this._propertyEffects;
-        if (fx$) {
-          for (var p in config) {
-            var fx = fx$[p];
-            if (fx) {
-              for (var i=0, l=fx.length, x; (i<l) && (x=fx[i]); i++) {
-                if (x.kind === 'annotation') {
-                  var node = this._nodes[x.effect.index];
-                  // seeding configuration only
-                  if (node._configValue) {
-                    node._configValue(x.effect.name, config[p]);
-                  }
+    // system override point
+    _beforeConfigure: function() {},
+
+    // distribute config values to bound nodes.
+    _distributeConfig: function(config) {
+      var fx$ = this._propertyEffects;
+      if (fx$) {
+        for (var p in config) {
+          var fx = fx$[p];
+          if (fx) {
+            for (var i=0, l=fx.length, x; (i<l) && (x=fx[i]); i++) {
+              if (x.kind === 'annotation') {
+                var node = this._nodes[x.effect.index];
+                // seeding configuration only
+                if (node._configValue) {
+                  node._configValue(x.effect.name, config[p]);
                 }
               }
             }
           }
         }
-      },
+      }
+    },
 
-      _beforeReady: function() {
-        this._applyConfig(this._config);
-        this._flushHandlers();
-      },
+    _beforeReady: function() {
+      this._applyConfig(this._config);
+      this._flushHandlers();
+    },
 
-      // NOTE: values are already propagated to children via 
-      // _distributeConfig so propagation triggered by effects here is 
-      // redundant, but safe due to dirty checking
-      _applyConfig: function(config) {
-        for (var n in config) {
-          // Don't stomp on values that may have been set by other side effects
-          if (this[n] === undefined) {
-            this[n] = config[n];
-          }
-        }
-      },
-
-      // NOTE: Notifications can be processed before ready since
-      // they are sent at *child* ready time. Since notifications cause side
-      // effects and side effects must not be processed before ready time,
-      // handling is queue/defered until then.
-      _notifyListener: function(fn, e) {
-        if (!this._readied) {
-          this._queueHandler(arguments);
-        } else {
-          return fn.call(this, e);
-        }
-      },
-
-      _queueHandler: function(args) {
-        this._handlers.push(args);
-      },
-
-      _flushHandlers: function() {
-        var h$ = this._handlers;
-        for (var i=0, l=h$.length, h; (i<l) && (h=h$[i]); i++) {
-          h[0].call(this, h[1]);
+    // NOTE: values are already propagated to children via 
+    // _distributeConfig so propagation triggered by effects here is 
+    // redundant, but safe due to dirty checking
+    _applyConfig: function(config) {
+      for (var n in config) {
+        // Don't stomp on values that may have been set by other side effects
+        if (this[n] === undefined) {
+          this[n] = config[n];
         }
       }
+    },
 
-    });
+    // NOTE: Notifications can be processed before ready since
+    // they are sent at *child* ready time. Since notifications cause side
+    // effects and side effects must not be processed before ready time,
+    // handling is queue/defered until then.
+    _notifyListener: function(fn, e) {
+      if (!this._readied) {
+        this._queueHandler(arguments);
+      } else {
+        return fn.call(this, e);
+      }
+    },
 
-    // TODO(sorvell): simple version of mixin; should go elsewhere
-    function mixin(a, b) {
-      for (var i in b) {
-        a[i] = b[i];
+    _queueHandler: function(args) {
+      this._handlers.push(args);
+    },
+
+    _flushHandlers: function() {
+      var h$ = this._handlers;
+      for (var i=0, l=h$.length, h; (i<l) && (h=h$[i]); i++) {
+        h[0].call(this, h[1]);
       }
     }
 
