--- a/components/polymer/src/features/standard/effects.html
+++ b/components/polymer/src/features/standard/effects.html
@@ -53,101 +53,96 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * @class data feature: bind
    */
 
-  using(['Base', 'bind', 'bind-annotations'], 
-   function(Base, Bind, BindAnnotations) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    addPropertyEffect: function(property, kind, effect) {
+     var model = property.split('.').shift();
+     Polymer.Bind.addPropertyEffect(this, model, kind, effect);
+    },
 
-      addPropertyEffect: function(property, kind, effect) {
-       var model = property.split('.').shift();
-       Bind.addPropertyEffect(this, model, kind, effect);
-      },
+    // prototyping
 
-      // prototyping
+    _notifyListener: Polymer.Bind._notifyListener,
 
-      _notifyListener: Bind._notifyListener,
+    _prepEffects: function() {
+      Polymer.Bind.prepareModel(this);
+      this._addDynamicEffects(this.properties);
+      this._addObserverEffects(this.observers);
+      this._addAnnotationEffects(this._annotes);
+      Polymer.Bind.createBindings(this);
+    },
 
-      _prepEffects: function() {
-        Bind.prepareModel(this);
-        this._addDynamicEffects(this.properties);
-        this._addObserverEffects(this.observers);
-        this._addAnnotationEffects(this._annotes);
-        Bind.createBindings(this);
-      },
-
-      _addDynamicEffects: function(dynamic) {
-        if (dynamic) {
-          for (var n in dynamic) {
-            var effect = dynamic[n];
-            if (effect.observer) {
-              this._addObserverEffect(n, effect.observer);
-            }
-            if (effect.computed) {
-              Bind.addComputedPropertyEffect(this, n, effect.computed);
-            }
-            if (this.isNotifyProperty(n)) {
-              this.addPropertyEffect(n, 'notify');
-            }
-            if (this.isReflectedProperty(n)) {
-              this.addPropertyEffect(n, 'reflect');
-            }
+    _addDynamicEffects: function(dynamic) {
+      if (dynamic) {
+        for (var n in dynamic) {
+          var effect = dynamic[n];
+          if (effect.observer) {
+            this._addObserverEffect(n, effect.observer);
+          }
+          if (effect.computed) {
+            Polymer.Bind.addComputedPropertyEffect(this, n, effect.computed);
+          }
+          if (this.isNotifyProperty(n)) {
+            this.addPropertyEffect(n, 'notify');
+          }
+          if (this.isReflectedProperty(n)) {
+            this.addPropertyEffect(n, 'reflect');
           }
         }
-      },
-
-      _addObserverEffects: function(observers) {
-        for (var n in observers) {
-          this._addObserverEffect(n, observers[n]);
-        }
-      },
-
-      _addObserverEffect: function(property, observer) {
-        var props = property.split(' ');
-        var methodString;
-        if (props.length == 1) {
-          // Single property synchronous observer (supports paths)
-          var model = property.split('.').shift();
-          if (model != property) {
-             // TODO(kschaaf): path observers won't get the right `new` argument...care?
-             this.addPathObserver(property, observer);
-          }
-          methodString = 'this.' + observer + '(this._data.' + model + ', old);';
-          this.addPropertyEffect(model, 'observer', {
-            method: observer,
-            property: model,
-            methodString: methodString
-          });
-        } else {
-          // Multiple-property debounced observer
-          var methodArgs = 'this._data.' + props.join(', this._data.');
-          methodString = 'this.debounce(\'_' + observer + '\', function() {\n' +
-            '\t\tthis.' + observer + '(' + methodArgs + ');\n' +
-            '\t});';
-          var effect = {
-            method: observer,
-            properties: props,
-            methodString: methodString
-          };
-          for (var i=0; i<props.length; i++) {
-            this.addPropertyEffect(props[i], 'observer', effect);
-          }
-        }
-      },
-
-      _addAnnotationEffects: function(notes) {
-        if (notes) {
-          BindAnnotations.addEffects(this, notes);
-        }
-      },
-
-      // instancing
-
-      _marshalInstanceEffects: function() {
-        Bind.prepareInstance(this);
-        Bind.setupBindListeners(this);
       }
+    },
 
-    });
+    _addObserverEffects: function(observers) {
+      for (var n in observers) {
+        this._addObserverEffect(n, observers[n]);
+      }
+    },
+
+    _addObserverEffect: function(property, observer) {
+      var props = property.split(' ');
+      var methodString;
+      if (props.length == 1) {
+        // Single property synchronous observer (supports paths)
+        var model = property.split('.').shift();
+        if (model != property) {
+           // TODO(kschaaf): path observers won't get the right `new` argument...care?
+           this.addPathObserver(property, observer);
+        }
+        methodString = 'this.' + observer + '(this._data.' + model + ', old);';
+        this.addPropertyEffect(model, 'observer', {
+          method: observer,
+          property: model,
+          methodString: methodString
+        });
+      } else {
+        // Multiple-property debounced observer
+        var methodArgs = 'this._data.' + props.join(', this._data.');
+        methodString = 'this.debounce(\'_' + observer + '\', function() {\n' +
+          '\t\tthis.' + observer + '(' + methodArgs + ');\n' +
+          '\t});';
+        var effect = {
+          method: observer,
+          properties: props,
+          methodString: methodString
+        };
+        for (var i=0; i<props.length; i++) {
+          this.addPropertyEffect(props[i], 'observer', effect);
+        }
+      }
+    },
+
+    _addAnnotationEffects: function(notes) {
+      if (notes) {
+        Polymer.BindAnnotations.addEffects(this, notes);
+      }
+    },
+
+    // instancing
+
+    _marshalInstanceEffects: function() {
+      Polymer.Bind.prepareInstance(this);
+      Polymer.Bind.setupBindListeners(this);
+    }
 
   });
 
