--- a/components/polymer/src/features/standard/events.html
+++ b/components/polymer/src/features/standard/events.html
@@ -38,80 +38,76 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * 
    */
 
-  using('Base', function(Base) {
+  Polymer.Base.addFeature({
 
-    Base.addFeature({
+    listeners: {},
 
-      listeners: {},
+    _marshalListeners: function() {
+      this._listenListeners(this.listeners);
+      this._listenKeyPresses(this.keyPresses);
+    },
 
-      _marshalListeners: function() {
-        this._listenListeners(this.listeners);
-        this._listenKeyPresses(this.keyPresses);
-      },
-
-      _listenListeners: function(listeners) {
-        var node, name, key;
-        for (key in listeners) {
-          if (key.indexOf('.') < 0) {
-            node = this;
-            name = key;
-          } else {
-            name = key.split('.');
-            node = this.$[name[0]];
-            name = name[1];
-          }
-          this.listen(node, name, listeners[key]);
+    _listenListeners: function(listeners) {
+      var node, name, key;
+      for (key in listeners) {
+        if (key.indexOf('.') < 0) {
+          node = this;
+          name = key;
+        } else {
+          name = key.split('.');
+          node = this.$[name[0]];
+          name = name[1];
         }
-      },
-
-      listen: function(node, eventName, methodName) {
-        var host = this;
-        node.addEventListener(eventName, function(e) {
-          if (host[methodName]) {
-            host[methodName](e, e.detail);
-          } else {
-            console.warn('[%s].[%s]: event handler [%s] is null in scope (%o)', 
-              node.localName, eventName, methodName, host);
-          }
-        });
-      },
-
-      keyPresses: {},
-
-      _listenKeyPresses: function(keyPresses) {
-        // for..in here to gate empty keyPresses object (iterates once or never)
-        for (var n in keyPresses) {
-          // only get here if there is something in keyPresses
-          // TODO(sjmiles): _keyPressesFeatureHandler uses `this.keyPresses`
-          // to look up keycodes, it's not agnostic like this method is
-          this.addEventListener('keydown', this._keyPressesFeatureHandler);
-          // map string keys to numeric codes
-          for (n in keyPresses) {
-            if (typeof n === 'string') {
-              keyPresses[this.eventKeyCodes[n]] = keyPresses[n];
-            }
-          }
-          break;
-        }
-      },
-
-      _keyPressesFeatureHandler: function(e) {
-        var method = this.keyPresses[e.keyCode];
-        if (method && this[method]) {
-          return this[method](e.keyCode, e);
-        }
-      },
-
-      eventKeyCodes: {
-        ESC_KEY: 27,
-        ENTER_KEY: 13,
-        LEFT: 37,
-        UP: 38,
-        RIGHT: 39,
-        DOWN: 40
+        this.listen(node, name, listeners[key]);
       }
+    },
 
-    });
+    listen: function(node, eventName, methodName) {
+      var host = this;
+      node.addEventListener(eventName, function(e) {
+        if (host[methodName]) {
+          host[methodName](e, e.detail);
+        } else {
+          console.warn('[%s].[%s]: event handler [%s] is null in scope (%o)', 
+            node.localName, eventName, methodName, host);
+        }
+      });
+    },
+
+    keyPresses: {},
+
+    _listenKeyPresses: function(keyPresses) {
+      // for..in here to gate empty keyPresses object (iterates once or never)
+      for (var n in keyPresses) {
+        // only get here if there is something in keyPresses
+        // TODO(sjmiles): _keyPressesFeatureHandler uses `this.keyPresses`
+        // to look up keycodes, it's not agnostic like this method is
+        this.addEventListener('keydown', this._keyPressesFeatureHandler);
+        // map string keys to numeric codes
+        for (n in keyPresses) {
+          if (typeof n === 'string') {
+            keyPresses[this.eventKeyCodes[n]] = keyPresses[n];
+          }
+        }
+        break;
+      }
+    },
+
+    _keyPressesFeatureHandler: function(e) {
+      var method = this.keyPresses[e.keyCode];
+      if (method && this[method]) {
+        return this[method](e.keyCode, e);
+      }
+    },
+
+    eventKeyCodes: {
+      ESC_KEY: 27,
+      ENTER_KEY: 13,
+      LEFT: 37,
+      UP: 38,
+      RIGHT: 39,
+      DOWN: 40
+    }
 
   });
 
