--- a/components/polymer/src/lib/annotations/annotations.html
+++ b/components/polymer/src/lib/annotations/annotations.html
@@ -62,217 +62,212 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  * @class Template feature
  */
 
-  modulate('Annotations', function() {
+  // null-array (shared empty array to avoid null-checks)
+  Polymer.nar = [];
 
-    // null-array (shared empty array to avoid null-checks)
-    var nar = [];
+  Polymer.Annotations = {
 
-    var Annotations = {
+    // preprocess-time
 
-      // preprocess-time
+    // construct and return a list of annotation records
+    // by scanning `template`'s content
+    //
+    parseAnnotations: function(template) {
+      var list = [];
+      var content = template._content || template.content; 
+      this._parseNodeAnnotations(content, list);
+      return list;
+    },
 
-      // construct and return a list of annotation records
-      // by scanning `template`'s content
-      //
-      parseAnnotations: function(template) {
-        var list = [];
-        var content = template._content || template.content; 
-        this._parseNodeAnnotations(content, list);
-        return list;
-      },
+    // add annotations gleaned from subtree at `node` to `list`
+    _parseNodeAnnotations: function(node, list) {
+      return node.nodeType === Node.TEXT_NODE ?
+        this._parseTextNodeAnnotation(node, list) :
+          // TODO(sjmiles): are there other nodes we may encounter
+          // that are not TEXT_NODE but also not ELEMENT?
+          this._parseElementAnnotations(node, list);
+    },
 
-      // add annotations gleaned from subtree at `node` to `list`
-      _parseNodeAnnotations: function(node, list) {
-        return node.nodeType === Node.TEXT_NODE ?
-          this._parseTextNodeAnnotation(node, list) :
-            // TODO(sjmiles): are there other nodes we may encounter
-            // that are not TEXT_NODE but also not ELEMENT?
-            this._parseElementAnnotations(node, list);
-      },
-
-      // add annotations gleaned from TextNode `node` to `list`
-      _parseTextNodeAnnotation: function(node, list) {
-        var v = node.textContent, escape = v.slice(0, 2);
-        if (escape === '{{' || escape === '[[') {
-          // NOTE: use a space here so the textNode remains; some browsers
-          // (IE) evacipate an empty textNode.
-          node.textContent = ' ';
-          var annote = {
-            bindings: [{
-              kind: 'text',
-              mode: escape[0],
-              value: v.slice(2, -2)
-            }]
-          };
-          list.push(annote);
-          return annote;
-        }
-      },
-
-      // add annotations gleaned from Element `node` to `list`
-      _parseElementAnnotations: function(element, list) {
+    // add annotations gleaned from TextNode `node` to `list`
+    _parseTextNodeAnnotation: function(node, list) {
+      var v = node.textContent, escape = v.slice(0, 2);
+      if (escape === '{{' || escape === '[[') {
+        // NOTE: use a space here so the textNode remains; some browsers
+        // (IE) evacipate an empty textNode.
+        node.textContent = ' ';
         var annote = {
-          bindings: [],
-          events: []
+          bindings: [{
+            kind: 'text',
+            mode: escape[0],
+            value: v.slice(2, -2)
+          }]
         };
-        this._parseChildNodesAnnotations(element, annote, list);
-        // TODO(sjmiles): is this for non-ELEMENT nodes? If so, we should
-        // change the contract of this method, or filter these out above.
-        if (element.attributes) {
-          this._parseNodeAttributeAnnotations(element, annote, list);
-          // TODO(sorvell): ad hoc callback for doing work on elements while
-          // leveraging annotator's tree walk.
-          // Consider adding an node callback registry and moving specific 
-          // processing out of this module.
-          if (this.prepElement) {
-            this.prepElement(element);
-          }
-        }
-        if (annote.bindings.length || annote.events.length || annote.id) {
-          list.push(annote);
-        }
+        list.push(annote);
         return annote;
-      },
+      }
+    },
 
-      // add annotations gleaned from children of `root` to `list`, `root`'s
-      // `annote` is supplied as it is the annote.parent of added annotations 
-      _parseChildNodesAnnotations: function(root, annote, list, callback) {
-        if (root.firstChild) {
-          for (var i=0, node=root.firstChild; node; node=node.nextSibling, i++){
-            if (node.localName === 'template') {
-              // TODO(sjmiles): simply altering the .content reference didn't
-              // work (there was some confusion, might need verification)
-              var content = document.createDocumentFragment();
-              content.appendChild(node.content);
-              // TODO(sjmiles): using `nar` to avoid unnecessary allocation;
-              // in general the handling of these arrays needs some cleanup 
-              // in this module
-              list.push({
-                bindings: nar,
-                events: nar,
-                templateContent: content,
-                parent: annote,
-                index: i
-              });
-            }
-            //
-            var childAnnotation = this._parseNodeAnnotations(node, list, callback);
-            if (childAnnotation) {
-              childAnnotation.parent = annote;
-              childAnnotation.index = i;
-            }
-          }
+    // add annotations gleaned from Element `node` to `list`
+    _parseElementAnnotations: function(element, list) {
+      var annote = {
+        bindings: [],
+        events: []
+      };
+      this._parseChildNodesAnnotations(element, annote, list);
+      // TODO(sjmiles): is this for non-ELEMENT nodes? If so, we should
+      // change the contract of this method, or filter these out above.
+      if (element.attributes) {
+        this._parseNodeAttributeAnnotations(element, annote, list);
+        // TODO(sorvell): ad hoc callback for doing work on elements while
+        // leveraging annotator's tree walk.
+        // Consider adding an node callback registry and moving specific 
+        // processing out of this module.
+        if (this.prepElement) {
+          this.prepElement(element);
         }
-      },
+      }
+      if (annote.bindings.length || annote.events.length || annote.id) {
+        list.push(annote);
+      }
+      return annote;
+    },
 
-      // add annotation data from attributes to the `annotation` for node `node`
-      // TODO(sjmiles): the distinction between an `annotation` and 
-      // `annotation data` is not as clear as it could be
-      _parseNodeAttributeAnnotations: function(node, annotation) {
-        for (var i=0, a; (a=node.attributes[i]); i++) {
-          var n = a.name, v = a.value;
-          // id
-          if (n === 'id') {
-            annotation.id = v;
-          }
-          // events (on-*)
-          else if (n.slice(0, 3) === 'on-') {
-            i--;
-            node.removeAttribute(n);
-            annotation.events.push({
-              name: n.slice(3),
-              value: v
+    // add annotations gleaned from children of `root` to `list`, `root`'s
+    // `annote` is supplied as it is the annote.parent of added annotations 
+    _parseChildNodesAnnotations: function(root, annote, list, callback) {
+      if (root.firstChild) {
+        for (var i=0, node=root.firstChild; node; node=node.nextSibling, i++){
+          if (node.localName === 'template') {
+            // TODO(sjmiles): simply altering the .content reference didn't
+            // work (there was some confusion, might need verification)
+            var content = document.createDocumentFragment();
+            content.appendChild(node.content);
+            // TODO(sjmiles): using `nar` to avoid unnecessary allocation;
+            // in general the handling of these arrays needs some cleanup 
+            // in this module
+            list.push({
+              bindings: Polymer.nar,
+              events: Polymer.nar,
+              templateContent: content,
+              parent: annote,
+              index: i
             });
           }
-          // bindings (other attributes)
-          else {
-            var b = this._parseNodeAttributeAnnotation(node, n, v);
-            if (b) {
-              i--;
-              annotation.bindings.push(b);
-            }
+          //
+          var childAnnotation = this._parseNodeAnnotations(node, list, callback);
+          if (childAnnotation) {
+            childAnnotation.parent = annote;
+            childAnnotation.index = i;
           }
         }
-      },
-
-      // construct annotation data from a generic attribute, or undefined
-      _parseNodeAttributeAnnotation: function(node, n, v) {
-        var mode = '', escape = v.slice(0, 2), name = n;
-        if (escape === '{{' || escape === '[[') {
-          // Mode (one-way or two)
-          mode = escape[0];
-          v = v.slice(2, -2);
-          // Negate
-          var not = false;
-          if (v[0] == '!') {
-            v = v.substring(1);
-            not = true;
-          }
-          // Attribute or property
-          var kind = 'property';
-          if (n[n.length-1] == '$') {
-            name = n.slice(0, -1);
-            kind = 'attribute';
-          }
-          // Remove annotation
-          node.removeAttribute(n);
-          // Case hackery: attributes are lower-case, but bind targets 
-          // (properties) are case sensitive. Gambit is to map dash-case to 
-          // camel-case: `foo-bar` becomes `fooBar`.
-          // Attribute bindings are excepted.
-          if (kind === 'property') {
-            name = Annotations.dashToCamelCase(name);
-          }
-          return {
-            kind: kind,
-            mode: mode,
-            name: name,
-            value: v,
-            negate: not
-          };
-        }
-      },
-
-      dashToCamelCase: function(dash) {
-        // TODO(sjmiles): is rejection test actually helping perf?
-        if (dash.indexOf('-') < 0) {
-          return dash;
-        }
-        return dash.replace(/-([a-z])/g, 
-          function(m) {
-            return m[1].toUpperCase(); 
-          }
-        );
-      },
-
-      camelToDashCase: function(camel) {
-        return camel.replace(/([a-z][A-Z])/g, 
-          function (g) { 
-            return g[0] + '-' + g[1].toLowerCase() 
-          }
-        );
-      },
-
-      // instance-time
-
-      _localSubTree: function(node, host) {
-        return (node === host) ? node.childNodes :
-           (node.lightChildren || node.childNodes);
-      },
-
-      findAnnotatedNode: function(root, annote) {
-        // recursively ascend tree until we hit root
-        var parent = annote.parent && 
-          Annotations.findAnnotatedNode(root, annote.parent);
-        // unwind the stack, returning the indexed node at each level
-        return !parent ? root : 
-          Annotations._localSubTree(parent, root)[annote.index];
       }
+    },
 
-    };
+    // add annotation data from attributes to the `annotation` for node `node`
+    // TODO(sjmiles): the distinction between an `annotation` and 
+    // `annotation data` is not as clear as it could be
+    _parseNodeAttributeAnnotations: function(node, annotation) {
+      for (var i=0, a; (a=node.attributes[i]); i++) {
+        var n = a.name, v = a.value;
+        // id
+        if (n === 'id') {
+          annotation.id = v;
+        }
+        // events (on-*)
+        else if (n.slice(0, 3) === 'on-') {
+          i--;
+          node.removeAttribute(n);
+          annotation.events.push({
+            name: n.slice(3),
+            value: v
+          });
+        }
+        // bindings (other attributes)
+        else {
+          var b = this._parseNodeAttributeAnnotation(node, n, v);
+          if (b) {
+            i--;
+            annotation.bindings.push(b);
+          }
+        }
+      }
+    },
 
-    return Annotations;
+    // construct annotation data from a generic attribute, or undefined
+    _parseNodeAttributeAnnotation: function(node, n, v) {
+      var mode = '', escape = v.slice(0, 2), name = n;
+      if (escape === '{{' || escape === '[[') {
+        // Mode (one-way or two)
+        mode = escape[0];
+        v = v.slice(2, -2);
+        // Negate
+        var not = false;
+        if (v[0] == '!') {
+          v = v.substring(1);
+          not = true;
+        }
+        // Attribute or property
+        var kind = 'property';
+        if (n[n.length-1] == '$') {
+          name = n.slice(0, -1);
+          kind = 'attribute';
+        }
+        // Remove annotation
+        node.removeAttribute(n);
+        // Case hackery: attributes are lower-case, but bind targets 
+        // (properties) are case sensitive. Gambit is to map dash-case to 
+        // camel-case: `foo-bar` becomes `fooBar`.
+        // Attribute bindings are excepted.
+        if (kind === 'property') {
+          name = Polymer.Annotations.dashToCamelCase(name);
+        }
+        return {
+          kind: kind,
+          mode: mode,
+          name: name,
+          value: v,
+          negate: not
+        };
+      }
+    },
 
-  });
+    dashToCamelCase: function(dash) {
+      // TODO(sjmiles): is rejection test actually helping perf?
+      if (dash.indexOf('-') < 0) {
+        return dash;
+      }
+      return dash.replace(/-([a-z])/g, 
+        function(m) {
+          return m[1].toUpperCase(); 
+        }
+      );
+    },
+
+    camelToDashCase: function(camel) {
+      return camel.replace(/([a-z][A-Z])/g, 
+        function (g) { 
+          return g[0] + '-' + g[1].toLowerCase() 
+        }
+      );
+    },
+
+    // instance-time
+
+    _localSubTree: function(node, host) {
+      return (node === host) ? node.childNodes :
+         (node.lightChildren || node.childNodes);
+    },
+
+    findAnnotatedNode: function(root, annote) {
+      // recursively ascend tree until we hit root
+      var parent = annote.parent && 
+        Polymer.Annotations.findAnnotatedNode(root, annote.parent);
+      // unwind the stack, returning the indexed node at each level
+      return !parent ? root : 
+        Polymer.Annotations._localSubTree(parent, root)[annote.index];
+    }
+
+  };
+
 
 </script>
