--- a/components/polymer/src/lib/array-splice.html
+++ b/components/polymer/src/lib/array-splice.html
@@ -8,7 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <script>
-modulate('ArraySplice', function() {
+
+Polymer.ArraySplice = (function() {
   
   function newSplice(index, removed, addedCount) {
     return {
@@ -255,8 +256,7 @@ modulate('ArraySplice', function() {
     }
   };
 
-  // exports
   return new ArraySplice();
 
-});
+})();
 </script>
