--- a/components/polymer/src/lib/bind/bind-annotations.html
+++ b/components/polymer/src/lib/bind/bind-annotations.html
@@ -10,71 +10,65 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-  modulate('bind-annotations', ['bind'], function(Bind) {
+  /*
+   * Parses the annotations list created by `annotations` features to perform
+   * declarative desugaring.
+   *
+   * Two tasks are supported:
+   *
+   * - nodes with 'id' are described in a virtual annotation list at
+   *   registration time. This list is then concretized per instance.
+   *
+   * - Simple mustache expressions consisting of a single property name
+   *   in a `textContent` context are bound using `bind` features
+   *   `bindMethod`. In this mode, the bound method is constructed at
+   *   registration time, so marshaling is done done via the concretized
+   *   `_nodes` at every access.
+   *
+   *   TODO(sjmiles): ph3ar general confusion between registration and
+   *   instance time tasks. Is there a cleaner way to disambiguate?
+   */
 
-    /*
-     * Parses the annotations list created by `annotations` features to perform
-     * declarative desugaring.
-     *
-     * Two tasks are supported:
-     *
-     * - nodes with 'id' are described in a virtual annotation list at
-     *   registration time. This list is then concretized per instance.
-     *
-     * - Simple mustache expressions consisting of a single property name
-     *   in a `textContent` context are bound using `bind` features
-     *   `bindMethod`. In this mode, the bound method is constructed at
-     *   registration time, so marshaling is done done via the concretized
-     *   `_nodes` at every access.
-     *
-     *   TODO(sjmiles): ph3ar general confusion between registration and
-     *   instance time tasks. Is there a cleaner way to disambiguate?
-     */
+  Polymer.BindAnnotations = {
 
-    var AnnotationsBind = {
+    // construct binding meta-data 
 
-      // construct binding meta-data 
-
-      addEffects: function(scope, list) {
-        // create a virtual annotation list, must be concretized at instance time
-        scope._nodes = [];
-        // process annotations that have been parsed from template
-        list.forEach(function(annotation) {
-          // where to find the node in the concretized list
-          var index = scope._nodes.push(annotation) - 1;
-          // TODO(sjmiles): we need to support multi-bind, right now you only get
-          // one (not including kind === `id`)
-          annotation.bindings.forEach(function(binding) {
-            AnnotationsBind._bindAnnotationBinding(scope, binding, index);
-          });
+    addEffects: function(scope, list) {
+      // create a virtual annotation list, must be concretized at instance time
+      scope._nodes = [];
+      // process annotations that have been parsed from template
+      list.forEach(function(annotation) {
+        // where to find the node in the concretized list
+        var index = scope._nodes.push(annotation) - 1;
+        // TODO(sjmiles): we need to support multi-bind, right now you only get
+        // one (not including kind === `id`)
+        annotation.bindings.forEach(function(binding) {
+          Polymer.BindAnnotations._bindAnnotationBinding(scope, binding, index);
         });
-      },
+      });
+    },
 
-      // _nodes[index][<binding.name=>]{{binding.value}}
-      _bindAnnotationBinding: function(scope, binding, index) {
-        // capture the node index
-        binding.index = index;
-        // discover top-level property (model) from path
-        var path = binding.value;
-        var i = path.indexOf('.');
-        // [name=]{{model[.subpath]}}
-        var model = (i >= 0) ? path.slice(0, i) : path;
-        // add 'annotation' binding effect for property 'model'
-        Bind.addPropertyEffect(scope, model, 'annotation', binding);
-      },
+    // _nodes[index][<binding.name=>]{{binding.value}}
+    _bindAnnotationBinding: function(scope, binding, index) {
+      // capture the node index
+      binding.index = index;
+      // discover top-level property (model) from path
+      var path = binding.value;
+      var i = path.indexOf('.');
+      // [name=]{{model[.subpath]}}
+      var model = (i >= 0) ? path.slice(0, i) : path;
+      // add 'annotation' binding effect for property 'model'
+      Polymer.Bind.addPropertyEffect(scope, model, 'annotation', binding);
+    },
 
-      // concretize `_nodes` map (annotation based)
+    // concretize `_nodes` map (annotation based)
 
-      marshalAnnotatedNodes: function(nodes, root, finder) {
-        return nodes.map(function(a) {
-          return finder(root, a);
-        });
-      }
+    marshalAnnotatedNodes: function(nodes, root, finder) {
+      return nodes.map(function(a) {
+        return finder(root, a);
+      });
+    }
 
-    };
-
-    return AnnotationsBind;
-
-  });
+  };
 
 </script>
