--- a/components/polymer/src/lib/dom-module.html
+++ b/components/polymer/src/lib/dom-module.html
@@ -8,26 +8,22 @@
     return document.createElement('dom-module');
   };
 
-  DomModule.prototype = {
+  DomModule.prototype = Object.create(HTMLElement.prototype);
 
-    constructor: DomModule,
+  DomModule.constructor = DomModule;
 
-    createdCallback: function() {
-      if (this.id || this.name) {
-        modules[this.id || this.name] = this;
-      }
-    },
+  DomModule.prototype.createdCallback = function() {
+    if (this.id || this.name) {
+      modules[this.id || this.name] = this;
+    }
+  };
 
-    import: function(id, slctr) {
-      var m = modules[id];
-      if (m && slctr) {
-        m = m.querySelector(slctr);
-      }
-      return m;
-    },
-    
-    __proto__: HTMLElement.prototype
-
+  DomModule.prototype.import = function(id, slctr) {
+    var m = modules[id];
+    if (m && slctr) {
+      m = m.querySelector(slctr);
+    }
+    return m;
   };
 
   // TODO(sorvell): dubious fix here; HTMLImports polyfill does not
