--- a/components/polymer/src/lib/settings.html
+++ b/components/polymer/src/lib/settings.html
@@ -8,37 +8,41 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <script>
-  modulate('Settings', function() {
-    // NOTE: Users must currently opt into using ShadowDOM. They do so by doing:
-    // Polymer = {dom: 'shadow'};
-    // TODO(sorvell): Decide if this should be auto-use when available.
-    // TODO(sorvell): if SD is auto-use, then the flag above should be something
-    // like: Polymer = {dom: 'shady'}
-    
-    // via Polymer object
-    var user = window.Polymer || {};
 
-    // via url
-    location.search.slice(1).split('&').forEach(function(o) {
-      o = o.split('=');
-      o[0] && (user[o[0]] = o[1] || true);
-    });
+  Polymer = {
+    Settings: (function() {
+      // NOTE: Users must currently opt into using ShadowDOM. They do so by doing:
+      // Polymer = {dom: 'shadow'};
+      // TODO(sorvell): Decide if this should be auto-use when available.
+      // TODO(sorvell): if SD is auto-use, then the flag above should be something
+      // like: Polymer = {dom: 'shady'}
+      
+      // via Polymer object
+      var user = window.Polymer || {};
 
-    var wantShadow = (user.dom === 'shadow');
-    var hasShadow = Boolean(Element.prototype.createShadowRoot);
-    var nativeShadow = hasShadow && !window.ShadowDOMPolyfill;
-    var useShadow = wantShadow && hasShadow;
+      // via url
+      location.search.slice(1).split('&').forEach(function(o) {
+        o = o.split('=');
+        o[0] && (user[o[0]] = o[1] || true);
+      });
 
-    var hasNativeImports = Boolean('import' in document.createElement('link'));
-    var useNativeImports = hasNativeImports;
+      var wantShadow = (user.dom === 'shadow');
+      var hasShadow = Boolean(Element.prototype.createShadowRoot);
+      var nativeShadow = hasShadow && !window.ShadowDOMPolyfill;
+      var useShadow = wantShadow && hasShadow;
 
-    return {
-      wantShadow: wantShadow,
-      hasShadow: hasShadow,
-      nativeShadow: nativeShadow,
-      useShadow: useShadow,
-      useNativeShadow: useShadow && nativeShadow,
-      useNativeImports: useNativeImports
-    };
-  });
+      var hasNativeImports = Boolean('import' in document.createElement('link'));
+      var useNativeImports = hasNativeImports;
+
+      return {
+        wantShadow: wantShadow,
+        hasShadow: hasShadow,
+        nativeShadow: nativeShadow,
+        useShadow: useShadow,
+        useNativeShadow: useShadow && nativeShadow,
+        useNativeImports: useNativeImports
+      };
+    })()
+  };
+
 </script>
